[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-rl-scaler"
version = "0.1.0"
description = "GNN-based RL autoscaling toolkit"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["gnn_rl", "gnn_rl_env"]

[project.optional-dependencies]
tests = ["pytest"]
